checkpatch-results/home/fedora/lkml-analysis/lkml/1/0000206123.e10aeb39c1d3567f1906ca36162c977c1b7c0672
WARNING:COMMIT_LOG_LONG_LINE: Possible unwrapped commit description (prefer a maximum 75 chars per line)
#46: 
> > > fs/proc/base.c:2547: error: 'pid_stack' undeclared here (not in a function)

WARNING:TYPO_SPELLING: 'dissapearing' may be misspelled - perhaps 'disappearing'?
#72: 
dissapearing is unneeded -- proc_single_show() pins task_struct, entry
^^^^^^^^^^^^

Some words may have been misspelled.  Consider reviewing them.

WARNING:UNKNOWN_COMMIT_ID: Unknown commit id '12bf5a00732a5f9512081291097d0e4a3224e8a3', maybe rebased or not pulled?
#78: 
commit 12bf5a00732a5f9512081291097d0e4a3224e8a3

WARNING:BAD_SIGN_OFF: Do not use whitespace before Signed-off-by:
#98: 
    Signed-off-by: Ken Chen <kenchen@google.com>

The signed-off-by line does not fall in line with the standards
specified by the community.

See: https://www.kernel.org/doc/html/latest/process/submitting-patches.html#developer-s-certificate-of-origin-1-1

WARNING:BAD_SIGN_OFF: Do not use whitespace before Signed-off-by:
#99: 
    Signed-off-by: Ingo Molnar <mingo@elte.hu>

WARNING:BAD_SIGN_OFF: Do not use whitespace before Signed-off-by:
#100: 
    Signed-off-by: Alexey Dobriyan <adobriyan@gmail.com>

WARNING:ALLOC_WITH_MULTIPLY: Prefer kmalloc_array over kmalloc with multiply
#141: FILE: fs/proc/base.c:352:
+	entries = kmalloc(MAX_STACK_TRACE_DEPTH * sizeof(*entries), GFP_KERNEL);

Prefer kmalloc_array/kcalloc over kmalloc/kzalloc with a
sizeof multiply.

See: https://www.kernel.org/doc/html/latest/core-api/memory-allocation.html

WARNING:SYMBOLIC_PERMS: Symbolic permissions 'S_IRUSR' are not preferred. Consider using octal permissions '0400'.
#169: FILE: fs/proc/base.c:2520:
+	ONE("stack",      S_IRUSR, proc_pid_stack),

Permission bits in the octal form are more readable and easier to
understand than their symbolic counterparts because many command-line
tools use this notation. Experienced kernel developers have been using
these traditional Unix permission bits for decades and so they find it
easier to understand the octal notation than the symbolic macros.
For example, it is harder to read S_IWUSR|S_IRUGO than 0644, which
obscures the developer's intent rather than clarifying it.

See: https://lore.kernel.org/lkml/CA+55aFw5v23T-zvDZp-MmD_EYxF8WbafwwB59934FV7g21uMGQ@mail.gmail.com/

WARNING:SYMBOLIC_PERMS: Symbolic permissions 'S_IRUSR' are not preferred. Consider using octal permissions '0400'.
#179: FILE: fs/proc/base.c:2858:
+	ONE("stack",      S_IRUSR, proc_pid_stack),

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000206123.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 total: 0 errors, 9 warnings, 0 checks, 69 lines checked

NOTE: For some of the reported defects, checkpatch may be able to
      mechanically convert to the typical style using --fix or --fix-inplace.

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000206123.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 has style problems, please review.

NOTE: If any of the errors are false positives, please report
      them to the maintainer, see CHECKPATCH in MAINTAINERS.
